// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`XmlSaxParser complex 1`] = `
[
  {
    "attrs": {},
    "name": "root",
    "selfClosing": false,
    "type": "element_open",
  },
  {
    "attrs": {
      "foo": "bar",
    },
    "name": "element",
    "selfClosing": false,
    "type": "element_open",
  },
  {
    "text": "text",
    "type": "text",
  },
  {
    "attrs": {
      "fiz": "buzz",
    },
    "name": "inner",
    "selfClosing": true,
    "type": "element_open",
  },
  {
    "name": "inner",
    "type": "element_close",
  },
  {
    "name": "element",
    "type": "element_close",
  },
  {
    "name": "root",
    "type": "element_close",
  },
]
`;

exports[`XmlSaxParser simple 1`] = `
[
  {
    "attrs": {},
    "name": "root",
    "selfClosing": false,
    "type": "element_open",
  },
  {
    "attrs": {},
    "name": "element",
    "selfClosing": false,
    "type": "element_open",
  },
  {
    "text": "text",
    "type": "text",
  },
  {
    "name": "element",
    "type": "element_close",
  },
  {
    "name": "root",
    "type": "element_close",
  },
]
`;
